<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">


        <EditText
            android:id="@+id/editTextOldEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="20dp"
            android:autofillHints="emailAddress"
            android:backgroundTint="@android:color/white"
            android:hint="@string/old_email"
            android:inputType="textEmailAddress"
            android:maxWidth="600dp"
            android:minHeight="48dp"
            android:textColor="@android:color/black"
            android:textColorHint="#546E7A" />

        <EditText
            android:id="@+id/editTextNewEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="16dp"
            android:autofillHints="emailAddress"
            android:backgroundTint="@android:color/white"
            android:hint="@string/new_email"
            android:inputType="textEmailAddress"
            android:maxWidth="600dp"
            android:minHeight="48dp"
            android:textColor="@android:color/black"
            android:textColorHint="#546E7A" />

        <Button
            android:id="@+id/btn_edit_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/edit_email" />

        <Button
            android:id="@+id/logoutBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout" />

        <Button
            android:id="@+id/btnDeleteAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_account" />

        <Button
            android:id="@+id/settings_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back_button" />

    </LinearLayout>
</ScrollView>
